<resources>
    <string name="app_name">Alshariqa Althaqafiya Magazine</string>
    <!-- <string name="categories">Categories</string>
     <string name="see_all">see all</string>
     <string name="featured_subjects">Featured Subjects</string>
     <string name="magazines">Magazines</string>
     <string name="articles_by_authors">Articles by Authors</string>
     <string name="home">Home</string>
     <string name="subjects">Subjects</string>
     <string name="articles">Articles</string>
     <string name="view_magazine">View Magazine</string>
     <string name="n_a">N/A</string>-->
    <string name="categories">التصنيفات</string>
    <string name="see_all">المزيد</string>
    <string name="featured_subjects">الموضوعات المميزة</string>
    <string name="magazines">المجلات</string>
    <string name="archives">الأرشيف</string>
    <string name="articles_by_authors">مقالات المؤلفين</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="subjects">المواضيع</string>
    <string name="articles">مقالات</string>
    <string name="view_magazine">اقرأ الشارقة </string>
    <string name="download_magazine">تحميل</string>
    <string name="magazine_detail">العدد الأربعو</string>
    <string name="details"> تفاصيل</string>
    <string name="n_a">غير متاح</string>
    <string name="category_sections">أبواب المجلة</string>
    <string name="issue_no"> العدد</string>
    <string name="load_more_author_articles">المزيد من المواضيع للكاتب</string>
    <string name="select_author">حدد المؤلف</string>
    <string name="loading">جار التحميل…</string>
    <string name="change_category">تغيير الفئة</string>
    <string name="view_4_comments">عرض 4 تعليقات</string>
    <string name="more_versions">المزيد من الإصدارات</string>
    <string name="article_detail">أمكنة وشواهد</string>
    <string name="think_narrate">فكر و روى</string>
    <string name="places_evidence">أمكنة وشواهد</string>
    <string name="creations">إبداعات</string>
    <string name="literature_writers">أدب وأدباء</string>
    <string name="art_string_feather">فن . وتر . ريشة</string>
    <string name="under_the_spotlight">تحت دائرة الضوء</string>
    <string name="about_sharjah_cultural">عن الشارقة الثقافية</string>
    <string name="editorial_board">هيئة التحرير</string>
    <string name="magazine_archive">أرشيف المجلة</string>
    <string name="distribution">التوزيع</string>
    <string name="subscriptions">الاشتركات</string>
    <string name="call_us">أتصل بنا</string>
    <string name="settings">الإعدادات</string>
    <string name="copyright">جميع الحقوق محفوظة لدائرة الثقافة - الشارقة 2020</string>
    <string name="more_apps">تطبيقات أكثر</string>
    <string name="font_size">حجم الخط</string>
    <string name="subject_evaluation">تقييم الموضوع</string>
    <string name="you_rated_the_topic">لقد قمت بتقييم الموضوع</string>
    <string name="ok">حسنا</string>
    <string name="write_comment">أضف تعليق على المقال</string>
    <string name="comments">التعليقات</string>
    <string name="added_to_favourite">تمت الإضافة إلى المفضلة</string>
    <string name="name">الإســـم</string>
    <string name="addition">إضافة</string>
    <string name="enter_email">ادخل البريد الإلكتروني</string>
    <string name="add_the_comment_to_box">قم باضافة تعليقك في ذلك المربع</string>
    <string name="search">البحث</string>
    <string name="search_results">نتائج البحث</string>
    <string name="save">حفظ</string>
    <string name="advanced_search">بحث متطور</string>
    <string name="search_word">كلمة البحث</string>
    <string name="release">الإصدار</string>
    <string name="writer">الكاتب</string>
    <string name="year">السنة</string>
    <string name="month">الشهر</string>
    <string name="choose_the_year">اختر السنة</string>
    <string name="more_options">المزيد من الخيارات</string>
    <string name="download">تحميل</string>
    <string name="read_the_number">اقرأ العدد</string>
    <string name="share_online">المشاركة عبر الإنترنت</string>
    <string name="about_us_header">نحو فهم أعمق للثقافة والفكر والتراث</string>
    <string name="about_us_content">انطلقت مجلة (الشارقة الثقافية) مع بدء فعاليات الدورة الخامسة والثلاثين لمعرض الشارقة الدولي للكتاب، تحت رعاية وحضور صاحب السمو الشيخ الدكتور سلطان بن محمد القاسمي عضو المجلس الأعلى حاكم الشارقة، وتوجيهاته الحكيمة للقائمين على المجلة كي تتخطى النمطي والمألوف إلى فضاءات أرحب، وبالتركيز على الثقافة واللغة العربيتين وإقامة جسور للتواصل الفكري والمعرفي مع الفعاليات الثقافية المحلية والعربية والدولية، وانطلاقاً من تلك التوجيهات؛ مروراً بكل ما هو ثقافي وفكري ومشجع، تسعى (الشارقة الثقافية) إلى الانفتاح على القارئ العربي في وطننا الكبير، عبر وسائل الاتصال الحديثة بعد أن تواصلت معه ورقياً في محاولة لمواكبة المتغيرات والتوازن بين الورقي والإلكتروني</string>
    <string name="editorial_board_content">رئيس دائرة الثقافة عبد الله محمد العويس  مدير التحرير نـواف يونـس  هيئة التحرير عبد الكريم يونس عـزت عـمـر حسان العبد عبد العليم حريص  التصميم والإخراج محمد سمير  التنضيد محـمـد محسن  التوزيع والإعلانات خالد صديق  مراقب الجودة والإنتاج أحمد سعيد</string>
    <string name="request_to_subscribe_magazine">طلب الإشتراك في مجلة الشارقة الثقافية</string>
    <string name="fill_form_subscription">قم بتعبئة الاستمارة أدناه للاشتراك بالمجلة</string>
    <string name="subtype">نوع الاشتراك</string>
    <string name="individual_subscription">اشتراك فردي</string>
    <string name="institution_subscription">اشتراك لمؤسسة</string>
    <string name="one_year">سنة واحدة</string>
    <string name="two_years">سنتين</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="first_name">الإسم الأول</string>
    <string name="middle_name">الإسم الأوسط</string>
    <string name="last_name">اسم العائلة</string>
    <string name="telephone_number">رقم الهاتف</string>
    <string name="land_line">هاتف أرضي</string>
    <string name="mobile_phone">هاتف الجوال</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="email_message">ادخل بريدك الإلكتروني لكي نستطيع التواصل معك من خلاله</string>
    <string name="address_1">العنوان 1</string>
    <string name="address_2">العنوان 2</string>
    <string name="postal_box">رقم الصندوق البريدي</string>
    <string name="mail_box">صندوق البريد</string>
    <string name="send">إرسال</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="sharjah_cultural_address">دائرة الثقافة - مجلة الشارقة الثقافية ص ب 5119 الشارقة الإمارات العربية المتحدة</string>
    <string name="application_version_1_0_0">Application version 1.0.0</string>
    <string name="notes">إشعارات</string>
    <string name="most_recent_post">أحدث نشر</string>
    <string name="ease_of_nav">سهولة التصفح</string>
    <string name="grayscale">تدرج الرمادي</string>
    <string name="memory">ذاكرة</string>
    <string name="delete_magazines">إزالة المجلات من الذاكرة و إعادة الضبط</string>
    <string name="removal">إزالة</string>
    <string name="favourite">المفضلة</string>
    <string name="read">اقرأ</string>
    <string name="delete_from_saved">حذف من المحفوظ</string>
    <string name="saved">تم الحفظ</string>


</resources>
