<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <EditText
        style="@style/AppText_Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:background="#f5f5f5"
        android:drawableEnd="@drawable/ic_feather_search"
        android:drawablePadding="@dimen/margin_24dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColorHint="@color/app_light_gray_1"
        android:textSize="@dimen/text_15sp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        app:tabInlineLabel="true"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="@color/app_dark_gray">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_1"
            android:text="@string/subjects" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_2"
            android:text="@string/articles" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_3"
            android:text="@string/magazines" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_light_gray" />

    <TextView
        android:id="@+id/tvLabel1"
        style="@style/AppText_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_21dp"
        android:layout_marginTop="@dimen/margin_12dp"
        android:text="@string/search_results"
        android:textSize="19sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>