<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginEnd="@dimen/margin_22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivSideBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_toEndOf="@id/ivBack"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_drawer_t" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/AppText_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/favourite"
            android:textAlignment="center"
            android:textSize="18sp" />


    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        app:tabInlineLabel="true"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="@color/app_dark_gray">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_1"
            android:text="@string/subjects" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_2"
            android:text="@string/articles" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_3"
            android:text="@string/magazines" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_light_gray" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>